--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
     rev: stable  
     hooks:
     - id: black
+      args: [--line-length=120]
       language_version: python3.10
 -   repo: https://github.com/pre-commit/mirrors-isort
     rev: v4.3.21
@@ -14,6 +15,7 @@ repos:
     rev: v2.4.0
     hooks:
     - id: flake8
+      args: [--max-line-length=120]
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v0.790
   hooks:
