--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,58 @@
-# see https://zenn.dev/fikastudio/articles/73c226000f9a0a
+ci:
+  autofix_commit_msg: "style(pre-commit): autofix"
+
 repos:
--   repo: https://github.com/psf/black
-    rev: stable  
+  # Standard hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
     hooks:
-    - id: black
-      args: [--line-length=120]
-      language_version: python3.10
--   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.21
+      - id: check-json
+      - id: check-merge-conflict
+      - id: check-toml
+      - id: check-xml
+      - id: check-yaml
+      - id: detect-private-key
+      - id: end-of-file-fixer
+      - id: mixed-line-ending
+      - id: trailing-whitespace
+        args: [--markdown-linebreak-ext=md]
+
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.37.0
     hooks:
-    - id: isort
-      args: [--profile black]
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.4.0
+      - id: markdownlint
+        args: ["-c", ".markdownlint.yaml", "--fix"]
+
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.3
     hooks:
-    - id: flake8
-      args: [--max-line-length=120]
-- repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v0.790
-  hooks:
-    - id: mypy
-      args: [--ignore-missing-imports]
+      - id: prettier
+
+  - repo: https://github.com/gruntwork-io/pre-commit
+    rev: v0.1.22
+    hooks:
+      - id: shellcheck
+
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        args: ["--profile", "black", "--line-length=120"]
+
+  - repo: https://github.com/psf/black
+    rev: 23.9.1
+    hooks:
+      - id: black
+        args: ["--skip-string-normalization", "--line-length=120"]
+
+        # - repo: https://github.com/pre-commit/mirrors-mypy
+        #   rev: v0.930
+        #   hooks:
+        #     - id: mypy
+        #       args: ["--ignore-missing-imports", "--strict-optional"]
+        #       language_version: python3.8
+
+  - repo: https://github.com/tcort/markdown-link-check
+    rev: v3.11.2
+    hooks:
+      - id: markdown-link-check
